# echo-scribe-app

./: README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/binaries/: system-audio-capture-aarch64-apple-darwin  whisper-cli-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/: system_audio_capture.swift
src-tauri/src/: lib.rs
